--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -186,12 +186,12 @@
 <td></td>
 </tr>
 <tr>
-<td>Mascotte Triple (9°)</td>
+<td>Cuvée des jonquilles (8°)</td>
 <td>4€</td>
 <td>7€</td>
 </tr>
 <tr>
-<td>Brasserie Picardienne</td>
+<td>Brasserie Au Baron</td>
 <td></td>
 <td></td>
 </tr>
@@ -206,12 +206,12 @@
 <td></td>
 </tr>
 <tr>
-<td>Cuvée des jonquilles (8°)</td>
+<td>Mascotte Triple (9°)</td>
 <td>4€</td>
 <td>7€</td>
 </tr>
 <tr>
-<td>Brasserie Au Baron</td>
+<td>Brasserie Picardennes</td>
 <td></td>
 <td></td>
 </tr>
