--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -372,15 +372,7 @@
 <td></td>
 </tr>
 <tr>
-<td>Lil Cola</td>
-<td>4€</td>
-</tr>
-<tr>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td>Lil Cola Sans Sucre</td>
+<td>Lil Cola (avec ou sans sucre)</td>
 <td>4€</td>
 </tr>
 <tr>
@@ -397,7 +389,7 @@
 </tr>
 <tr>
 <td>Limonade Annexe</td>
-<td></td>
+<td>5€</td>
 </tr>
 <tr>
 <td>Coing, Ginger Beer, Myrtille Bio</td>
@@ -409,14 +401,6 @@
 </tr>
 <tr>
 <td>Framboise &amp; pêche de vigne, Citron vert &amp; Gingembre</td>
-<td></td>
-</tr>
-<tr>
-<td>Fritz Limonade Citron</td>
-<td>4€</td>
-</tr>
-<tr>
-<td></td>
 <td></td>
 </tr>
 </tbody>
