--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -106,17 +106,17 @@
 </thead>
 <tbody>
 <tr>
-<td>Fob (5°)</td>
+<td>Pils ou face (5°)</td>
 <td>3€</td>
 <td>5€</td>
 </tr>
 <tr>
-<td>Raising Hops X Hop Culture</td>
+<td>Meteor</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
-<td>Saison Dupont Bio (6,5°)</td>
+<td>Saison Dupont Bio (5,5°)</td>
 <td>3,5€</td>
 <td>6€</td>
 </tr>
