--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -280,32 +280,6 @@
 <table>
 <thead>
 <tr>
-<th>🍸 Cocktail</th>
-<th></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Moscow Mule</td>
-<td>8€</td>
-</tr>
-<tr>
-<td>Ginger beer, citron vert, Vodka</td>
-<td></td>
-</tr>
-<tr>
-<td>London Mule</td>
-<td>8€</td>
-</tr>
-<tr>
-<td>Ginger beer, citron vert, Gin</td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<table>
-<thead>
-<tr>
 <th>🍷 Vin</th>
 <th></th>
 </tr>
@@ -332,32 +306,6 @@
 <table>
 <thead>
 <tr>
-<th>🥃 Spiritueux</th>
-<th>4cl</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Arrive bientôt</td>
-<td>Prix</td>
-</tr>
-<tr>
-<td>Arrive bientôt</td>
-<td></td>
-</tr>
-<tr>
-<td>Arrive bientôt</td>
-<td>Prix</td>
-</tr>
-<tr>
-<td>Arrive bientôt</td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<table>
-<thead>
-<tr>
 <th>🧃 Sans alcool</th>
 <th></th>
 </tr>
@@ -368,12 +316,12 @@
 <td>5,5€</td>
 </tr>
 <tr>
-<td>Original, Jassberry, Citron Menthe &amp; Fire, Hoppy</td>
+<td>Original, Jassberry, Hoppy, Citron Menthe &amp; Fire</td>
 <td></td>
 </tr>
 <tr>
-<td>Lil Cola (avec ou sans sucre)</td>
-<td>4€</td>
+<td>Maté</td>
+<td>5,5€</td>
 </tr>
 <tr>
 <td></td>
@@ -401,6 +349,14 @@
 </tr>
 <tr>
 <td>Framboise &amp; pêche de vigne, Citron vert &amp; Gingembre</td>
+<td></td>
+</tr>
+<tr>
+<td>Lil Cola (avec ou sans sucre)</td>
+<td>4€</td>
+</tr>
+<tr>
+<td></td>
 <td></td>
 </tr>
 </tbody>
