--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -340,7 +340,7 @@
 <td>5€</td>
 </tr>
 <tr>
-<td>Coing, Ginger Beer, Myrtille Bio</td>
+<td>Coing, Ginger Beer, Myrtille, Framboise</td>
 <td></td>
 </tr>
 <tr>
