--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -235,7 +235,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Orval (33cl)</td>
+<td>Orval (6,2°)</td>
 <td>6€</td>
 </tr>
 <tr>
@@ -243,7 +243,7 @@
 <td></td>
 </tr>
 <tr>
-<td>XX Bitter (33cl)</td>
+<td>XX Bitter (6°)</td>
 <td>4,5€</td>
 </tr>
 <tr>
@@ -251,7 +251,7 @@
 <td></td>
 </tr>
 <tr>
-<td>Joe NEIPA (33cl)</td>
+<td>Joe NEIPA (6°)</td>
 <td>7€</td>
 </tr>
 <tr>
@@ -259,7 +259,7 @@
 <td></td>
 </tr>
 <tr>
-<td>Gose Cassis Basilic (33cl)</td>
+<td>Gose Cassis Basilic (6°)</td>
 <td>7€</td>
 </tr>
 <tr>
@@ -267,11 +267,35 @@
 <td></td>
 </tr>
 <tr>
-<td>Imperial Pastry Gose (33cl)</td>
+<td>Imperial Pastry Gose (10°)</td>
 <td>9€</td>
 </tr>
 <tr>
 <td>Brasserie Iron</td>
+<td></td>
+</tr>
+<tr>
+<td>Blanche Brunehaut - Sans gluten (5,5°)</td>
+<td>5€</td>
+</tr>
+<tr>
+<td>Brasserie de Brunehaut</td>
+<td></td>
+</tr>
+<tr>
+<td>Lil - Sans alcool</td>
+<td>5€</td>
+</tr>
+<tr>
+<td>Brasserie Gobrecht</td>
+<td></td>
+</tr>
+<tr>
+<td>Lil Fruits rouges - Sans Alcool</td>
+<td>5€</td>
+</tr>
+<tr>
+<td>Brasserie Gobrecht</td>
 <td></td>
 </tr>
 </tbody>
@@ -373,7 +397,7 @@
 <td>6€</td>
 </tr>
 <tr>
-<td>Nature, aux herbes, Comté</td>
+<td>Nature, aux herbes, Comté, Beaufort</td>
 <td></td>
 </tr>
 <tr>
@@ -381,7 +405,7 @@
 <td>6€</td>
 </tr>
 <tr>
-<td>Caviars d’aubergine, Thoionades à la provençale, Terrines au piment d’espelette, Terrines à la bière jonquilles</td>
+<td>Caviars d’aubergine, Thoionades à la provençale, Terrines au piment d’espelette, Terrines à la bière jonquilles, Houmous citronné, Tomates séchées</td>
 <td></td>
 </tr>
 </tbody>
