--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -195,12 +195,12 @@
 <td></td>
 </tr>
 <tr>
-<td>Accalmie (4,5°)</td>
+<td>Praise the Sun (5°)</td>
 <td>4,5€</td>
 <td>8€</td>
 </tr>
 <tr>
-<td>Brasserie Sacrilège</td>
+<td>Brasserie Chromatique</td>
 <td></td>
 <td></td>
 </tr>
@@ -239,6 +239,30 @@
 </tr>
 </thead>
 <tbody>
+<tr>
+<td>NEIPA Citra Elixir 6,5° (44cl)</td>
+<td>7€</td>
+</tr>
+<tr>
+<td>Brasserie Cambier</td>
+<td></td>
+</tr>
+<tr>
+<td>Double Nectaron 8° (44cl)</td>
+<td>7,5€</td>
+</tr>
+<tr>
+<td>Brasserie Cambier</td>
+<td></td>
+</tr>
+<tr>
+<td>Pastry Sour 6,1° (44cl)</td>
+<td>8€</td>
+</tr>
+<tr>
+<td>Brasserie Cambier</td>
+<td></td>
+</tr>
 <tr>
 <td>Orval (6,2°)</td>
 <td>6€</td>
@@ -301,6 +325,14 @@
 </tr>
 <tr>
 <td>Brasserie Gobrecht</td>
+<td></td>
+</tr>
+<tr>
+<td>Cute &amp; Sober - Sans Alcool (33cl)</td>
+<td>5€</td>
+</tr>
+<tr>
+<td>Brasserie la débauche</td>
 <td></td>
 </tr>
 </tbody>
