--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -434,7 +434,7 @@
 <td>6€</td>
 </tr>
 <tr>
-<td>Nature, aux herbes, Comté, Beaufort</td>
+<td>Fuet catalan, aux herbes, Comté, Beaufort</td>
 <td></td>
 </tr>
 <tr>
