--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -9,10 +9,12 @@
     <link rel="canonical" href="http://localhost:1313/carte/">
     <link rel="icon" href="http://localhost:1313/favicon.svg" type="image/svg+xml"> 
 
-    <meta property="og:title" content="Notre carte : Bières, cocktails, spiritueux, softs &amp;amp; en-cas" />
-<meta property="og:description" content="La carte du Raising Hops. Des bières pression ou canette, des cocktails, des softs et des encas." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/carte/" />
+    <meta property="og:url" content="http://localhost:1313/carte/">
+  <meta property="og:site_name" content="Raising Hops">
+  <meta property="og:title" content="Notre carte : Bières, cocktails, spiritueux, softs &amp;amp; en-cas">
+  <meta property="og:description" content="La carte du Raising Hops. Des bières pression ou canette, des cocktails, des softs et des encas.">
+  <meta property="og:locale" content="fr-fr">
+  <meta property="og:type" content="website">
  
 
     
@@ -155,22 +157,22 @@
 <td></td>
 </tr>
 <tr>
-<td>Dalva (8,5°)</td>
+<td>Larsen (9°)</td>
 <td>4,5€</td>
 <td>8€</td>
 </tr>
 <tr>
-<td>Brasserie Thiriez</td>
+<td>Brasserie la Muette</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
-<td>Météor Cerise (5,5°)</td>
-<td>3,5€</td>
-<td>6€</td>
+<td>Lil Cerise (8°)</td>
+<td>4€</td>
+<td>7€</td>
 </tr>
 <tr>
-<td>Brasserie Météor</td>
+<td>Brasserie Gobrecht</td>
 <td></td>
 <td></td>
 </tr>
@@ -434,7 +436,7 @@
 <td>6€</td>
 </tr>
 <tr>
-<td>Fuet catalan, aux herbes, Comté, Beaufort</td>
+<td>Fuet catalan, Beaufort</td>
 <td></td>
 </tr>
 <tr>
