--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -207,12 +207,12 @@
 <td></td>
 </tr>
 <tr>
-<td>Mascotte Triple (9°)</td>
-<td>4€</td>
-<td>7€</td>
+<td>Freestyle #17 (5°)</td>
+<td>3,5€</td>
+<td>6€</td>
 </tr>
 <tr>
-<td>Brasserie Picardennes</td>
+<td>Brasserie du Pays Flamand</td>
 <td></td>
 <td></td>
 </tr>
