--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -266,6 +266,22 @@
 <td></td>
 </tr>
 <tr>
+<td>Peekaboo 5° (33cl)</td>
+<td>7,5€</td>
+</tr>
+<tr>
+<td>Brasserie Hoppy Road</td>
+<td></td>
+</tr>
+<tr>
+<td>Mazout 12° (33cl)</td>
+<td>7€</td>
+</tr>
+<tr>
+<td>Brasserie Hoppy Road</td>
+<td></td>
+</tr>
+<tr>
 <td>Orval (6,2°)</td>
 <td>6€</td>
 </tr>
