--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -364,7 +364,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Côte de Provence</td>
+<td>Rosé de Provence</td>
 <td>4,5€</td>
 </tr>
 <tr>
@@ -377,6 +377,40 @@
 </tr>
 <tr>
 <td></td>
+<td></td>
+</tr>
+<tr>
+<td>Bourgueil</td>
+<td>5€</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<table>
+<thead>
+<tr>
+<th>🍹</th>
+<th></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Moscow Mule</td>
+<td>8€</td>
+</tr>
+<tr>
+<td>Vodka, Ginger Beer, Citron vert</td>
+<td></td>
+</tr>
+<tr>
+<td>Gin Tonic</td>
+<td>8€</td>
+</tr>
+<tr>
+<td>Gin, Tonic, Citron vert</td>
 <td></td>
 </tr>
 </tbody>
@@ -431,7 +465,7 @@
 </tr>
 <tr>
 <td>Lil Cola (avec ou sans sucre)</td>
-<td>4€</td>
+<td>4,5€</td>
 </tr>
 <tr>
 <td></td>
@@ -452,7 +486,7 @@
 <td>6€</td>
 </tr>
 <tr>
-<td>Fuet catalan, Beaufort</td>
+<td>Fuet catalan, Comté</td>
 <td></td>
 </tr>
 <tr>
