--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -392,7 +392,7 @@
 <table>
 <thead>
 <tr>
-<th>🍹 Cocktail</th>
+<th>🍹 Cocktails</th>
 <th></th>
 </tr>
 </thead>
@@ -456,16 +456,16 @@
 <td></td>
 </tr>
 <tr>
+<td>Lil Cola (avec ou sans sucre)</td>
+<td>5€</td>
+</tr>
+<tr>
 <td>Spunky</td>
 <td>4,5€</td>
 </tr>
 <tr>
 <td>Framboise &amp; pêche de vigne, Citron vert &amp; Gingembre</td>
 <td></td>
-</tr>
-<tr>
-<td>Lil Cola (avec ou sans sucre)</td>
-<td>4,5€</td>
 </tr>
 <tr>
 <td></td>
