--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -13,7 +13,7 @@
   <meta property="og:site_name" content="Raising Hops">
   <meta property="og:title" content="Notre carte : Bières, cocktails, spiritueux, softs &amp;amp; en-cas">
   <meta property="og:description" content="La carte du Raising Hops. Des bières pression ou canette, des cocktails, des softs et des encas.">
-  <meta property="og:locale" content="fr-fr">
+  <meta property="og:locale" content="fr_fr">
   <meta property="og:type" content="website">
  
 
