--- a/public/mentions-legales/index.html
+++ b/public/mentions-legales/index.html
@@ -13,7 +13,7 @@
   <meta property="og:site_name" content="Raising Hops">
   <meta property="og:title" content="Mentions légales - Raising Hops">
   <meta property="og:description" content="Mentions légales du Raising Hops : Informations sur le propriétaire, conditions d&#39;utilisation, protection des données, droit d&#39;auteur.">
-  <meta property="og:locale" content="fr-fr">
+  <meta property="og:locale" content="fr_fr">
   <meta property="og:type" content="website">
     <meta property="og:image" content="http://localhost:1313/mentions-legales/cover.webp">
  
