--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -494,7 +494,7 @@
 <td>6€</td>
 </tr>
 <tr>
-<td>Caviars d’aubergine, Thoionades à la provençale, Terrines au piment d’espelette, Terrines à la bière jonquilles, Houmous citronné, Tomates séchées</td>
+<td>Caviars d’aubergine, Terrines au piment d’espelette, Terrines à la bière jonquilles, Houmous citronné, Tomates séchées</td>
 <td></td>
 </tr>
 </tbody>
