--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -242,6 +242,22 @@
 </thead>
 <tbody>
 <tr>
+<td>PVL Printemps 5,5°</td>
+<td>7€</td>
+</tr>
+<tr>
+<td>Brasserie du Pavé</td>
+<td></td>
+</tr>
+<tr>
+<td>PVL Sumbawa en Pévèle - 5,5°</td>
+<td>7€</td>
+</tr>
+<tr>
+<td>Brasserie du Pavé</td>
+<td></td>
+</tr>
+<tr>
 <td>NEIPA Citra Elixir 6,5° (44cl)</td>
 <td>7€</td>
 </tr>
@@ -429,14 +445,6 @@
 </tr>
 <tr>
 <td>Original, Jassberry, Hoppy, Citron Menthe &amp; Fire</td>
-<td></td>
-</tr>
-<tr>
-<td>Maté</td>
-<td>5,5€</td>
-</tr>
-<tr>
-<td></td>
 <td></td>
 </tr>
 <tr>
