--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -479,6 +479,14 @@
 <td></td>
 <td></td>
 </tr>
+<tr>
+<td>Jus de pomme ou pomme/poire</td>
+<td>4,5€</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
 </tbody>
 </table>
 <table>
