--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -147,9 +147,9 @@
 <td></td>
 </tr>
 <tr>
-<td>Hazy Diamond (5°)</td>
-<td>4€</td>
-<td>7,5€</td>
+<td>Scarlet (8°)</td>
+<td>4,5€</td>
+<td>8€</td>
 </tr>
 <tr>
 <td>Brasserie la Débauche</td>
@@ -217,12 +217,12 @@
 <td></td>
 </tr>
 <tr>
-<td>Guldenberg (8°)</td>
-<td>4€</td>
-<td>7,5€</td>
+<td>Horizon (8°)</td>
+<td>,5€</td>
+<td>8€</td>
 </tr>
 <tr>
-<td>Brasserie De Ranke</td>
+<td>Brasserie Chromatique</td>
 <td></td>
 <td></td>
 </tr>
