--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -117,12 +117,12 @@
 <td></td>
 </tr>
 <tr>
-<td>Saison Dupont Bio (5,5°)</td>
-<td>3,5€</td>
-<td>6€</td>
+<td>Thelma (7°)</td>
+<td>4,5€</td>
+<td>8€</td>
 </tr>
 <tr>
-<td>Brasserie Dupont</td>
+<td>Brasserie Thiriez</td>
 <td></td>
 <td></td>
 </tr>
@@ -207,12 +207,12 @@
 <td></td>
 </tr>
 <tr>
-<td>Freestyle #17 (5°)</td>
-<td>3,5€</td>
-<td>6€</td>
+<td>Framboise Rhubarbe (5°)</td>
+<td>4,5€</td>
+<td>8€</td>
 </tr>
 <tr>
-<td>Brasserie du Pays Flamand</td>
+<td>Brasserie Cambier</td>
 <td></td>
 <td></td>
 </tr>
@@ -311,14 +311,6 @@
 </tr>
 <tr>
 <td>Brasserie De Ranke</td>
-<td></td>
-</tr>
-<tr>
-<td>Joe NEIPA (6°)</td>
-<td>7€</td>
-</tr>
-<tr>
-<td>Brasserie Iron</td>
 <td></td>
 </tr>
 <tr>
@@ -444,7 +436,7 @@
 <td>5,5€</td>
 </tr>
 <tr>
-<td>Original, Jassberry, Hoppy, Citron Menthe &amp; Fire</td>
+<td>Original, Jassberry, Hoppy</td>
 <td></td>
 </tr>
 <tr>
@@ -502,7 +494,7 @@
 <td>6€</td>
 </tr>
 <tr>
-<td>Fuet catalan, Comté</td>
+<td>Fuet catalan, Comté, Nature</td>
 <td></td>
 </tr>
 <tr>
