--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -107,12 +107,12 @@
 </thead>
 <tbody>
 <tr>
-<td>Pils ou face (5°)</td>
-<td>3€</td>
-<td>5€</td>
+<td>Blanche Sureau (4,5°)</td>
+<td>3,5€</td>
+<td>6,5€</td>
 </tr>
 <tr>
-<td>Meteor</td>
+<td>Bière de blé - Brasserie Cambier</td>
 <td></td>
 <td></td>
 </tr>
@@ -122,17 +122,17 @@
 <td>8€</td>
 </tr>
 <tr>
-<td>Brasserie Thiriez</td>
+<td>Saison au poivre sauvage et hibiscus - Brasserie Thiriez</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
-<td>Session IPA (4,2°)</td>
+<td>Rincette (4,2°)</td>
 <td>3,5€</td>
-<td>6€</td>
+<td>6,5€</td>
 </tr>
 <tr>
-<td>Brasserie Tours du Malt</td>
+<td>Session IPA - Brasserie Tours du Malt</td>
 <td></td>
 <td></td>
 </tr>
@@ -142,7 +142,7 @@
 <td>7,5€</td>
 </tr>
 <tr>
-<td>Brasserie Cambier</td>
+<td>NEIPA - Brasserie Cambier</td>
 <td></td>
 <td></td>
 </tr>
@@ -152,17 +152,17 @@
 <td>8€</td>
 </tr>
 <tr>
-<td>Brasserie la Débauche</td>
+<td>Sour aux fruits rouges - Brasserie la Débauche</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
 <td>Larsen (9°)</td>
-<td>4,5€</td>
-<td>8€</td>
+<td>5€</td>
+<td>9€</td>
 </tr>
 <tr>
-<td>Brasserie la Muette</td>
+<td>Double IPA - Brasserie la Muette</td>
 <td></td>
 <td></td>
 </tr>
@@ -172,7 +172,7 @@
 <td>7,5€</td>
 </tr>
 <tr>
-<td>Brasserie Gobrecht</td>
+<td>Fruitée - Brasserie Gobrecht</td>
 <td></td>
 <td></td>
 </tr>
@@ -182,7 +182,7 @@
 <td>7,5€</td>
 </tr>
 <tr>
-<td>Brasserie Sullivan&rsquo;s</td>
+<td>Stout - Brasserie Sullivan&rsquo;s</td>
 <td></td>
 <td></td>
 </tr>
@@ -192,7 +192,7 @@
 <td>7,5€</td>
 </tr>
 <tr>
-<td>Brasserie Au Baron</td>
+<td>Bière de garde - Brasserie Au Baron</td>
 <td></td>
 <td></td>
 </tr>
@@ -202,7 +202,7 @@
 <td>8€</td>
 </tr>
 <tr>
-<td>Brasserie Chromatique</td>
+<td>Gose abricot &amp; romarin - Brasserie Chromatique</td>
 <td></td>
 <td></td>
 </tr>
@@ -212,17 +212,17 @@
 <td>8€</td>
 </tr>
 <tr>
-<td>Brasserie Cambier</td>
+<td>Sour - Brasserie Cambier</td>
 <td></td>
 <td></td>
 </tr>
 <tr>
 <td>Horizon (8°)</td>
-<td>,5€</td>
-<td>8€</td>
+<td>4€</td>
+<td>7,5€</td>
 </tr>
 <tr>
-<td>Brasserie Chromatique</td>
+<td>Triple belge - Brasserie Chromatique</td>
 <td></td>
 <td></td>
 </tr>
@@ -242,7 +242,47 @@
 </thead>
 <tbody>
 <tr>
-<td>PVL Printemps 5,5°</td>
+<td>Pink Devils 4° (44cl)</td>
+<td>7€</td>
+</tr>
+<tr>
+<td>Brasserie Nautile</td>
+<td></td>
+</tr>
+<tr>
+<td>Tidal Wave 6° (44cl)</td>
+<td>8€</td>
+</tr>
+<tr>
+<td>Brasserie Nautile</td>
+<td></td>
+</tr>
+<tr>
+<td>In the Steep 6,7° (44cl)</td>
+<td>9€</td>
+</tr>
+<tr>
+<td>Brasserie Outer Range</td>
+<td></td>
+</tr>
+<tr>
+<td>Cosmic Sauce 6,4° (44cl)</td>
+<td>9€</td>
+</tr>
+<tr>
+<td>Brasserie Outer Range</td>
+<td></td>
+</tr>
+<tr>
+<td>Big Boy 12° (33cl)</td>
+<td>7,5€</td>
+</tr>
+<tr>
+<td>Brasserie La Débauche</td>
+<td></td>
+</tr>
+<tr>
+<td>PVL Printemps 5,5° (33cl)</td>
 <td>7€</td>
 </tr>
 <tr>
@@ -250,19 +290,11 @@
 <td></td>
 </tr>
 <tr>
-<td>PVL Sumbawa en Pévèle - 5,5°</td>
+<td>PVL Sumbawa en Pévèle - 5,5° (33cl)</td>
 <td>7€</td>
 </tr>
 <tr>
 <td>Brasserie du Pavé</td>
-<td></td>
-</tr>
-<tr>
-<td>NEIPA Citra Elixir 6,5° (44cl)</td>
-<td>7€</td>
-</tr>
-<tr>
-<td>Brasserie Cambier</td>
 <td></td>
 </tr>
 <tr>
@@ -276,6 +308,14 @@
 <tr>
 <td>Pastry Sour 6,1° (44cl)</td>
 <td>8€</td>
+</tr>
+<tr>
+<td>Brasserie Cambier</td>
+<td></td>
+</tr>
+<tr>
+<td>Double Citra 8° (44cl)</td>
+<td>7€</td>
 </tr>
 <tr>
 <td>Brasserie Cambier</td>
@@ -298,15 +338,15 @@
 <td></td>
 </tr>
 <tr>
-<td>Orval (6,2°)</td>
-<td>6€</td>
+<td>Orval 6,2° (33cl)</td>
+<td>5€</td>
 </tr>
 <tr>
 <td>Brasserie d&rsquo;Orval</td>
 <td></td>
 </tr>
 <tr>
-<td>XX Bitter (6°)</td>
+<td>XX Bitter 6° (33cl)</td>
 <td>4,5€</td>
 </tr>
 <tr>
@@ -314,7 +354,7 @@
 <td></td>
 </tr>
 <tr>
-<td>Gose Cassis Basilic (6°)</td>
+<td>Gose Cassis Basilic 6° (33cl)</td>
 <td>7€</td>
 </tr>
 <tr>
@@ -322,15 +362,7 @@
 <td></td>
 </tr>
 <tr>
-<td>Imperial Pastry Gose (10°)</td>
-<td>9€</td>
-</tr>
-<tr>
-<td>Brasserie Iron</td>
-<td></td>
-</tr>
-<tr>
-<td>Blanche Brunehaut - Sans gluten (5,5°)</td>
+<td>Blanche Brunehaut - Sans gluten 5,5° (33cl)</td>
 <td>5€</td>
 </tr>
 <tr>
@@ -338,7 +370,7 @@
 <td></td>
 </tr>
 <tr>
-<td>Lil - Sans alcool</td>
+<td>Lil - Sans alcool (33cl)</td>
 <td>5€</td>
 </tr>
 <tr>
@@ -346,7 +378,7 @@
 <td></td>
 </tr>
 <tr>
-<td>Lil Fruits rouges - Sans Alcool</td>
+<td>Lil Fruits rouges - Sans Alcool (33cl)</td>
 <td>5€</td>
 </tr>
 <tr>
@@ -366,7 +398,7 @@
 <table>
 <thead>
 <tr>
-<th>🍷 Vin</th>
+<th>🍷 Vin &amp; cidre</th>
 <th></th>
 </tr>
 </thead>
@@ -390,6 +422,14 @@
 <tr>
 <td>Bourgueil</td>
 <td>5€</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td>Cidre Mauret (33cl)</td>
+<td>6€</td>
 </tr>
 <tr>
 <td></td>
@@ -494,7 +534,7 @@
 <td>6€</td>
 </tr>
 <tr>
-<td>Fuet catalan, Comté, Nature</td>
+<td>Fuet catalan, Comté</td>
 <td></td>
 </tr>
 <tr>
@@ -502,7 +542,7 @@
 <td>6€</td>
 </tr>
 <tr>
-<td>Caviars d’aubergine, Terrines au piment d’espelette, Terrines à la bière jonquilles, Houmous citronné, Tomates séchées</td>
+<td>Caviars d’aubergine, Terrine au piment d’espelette, Terrine à la bière jonquilles, Houmous citronné, Tomates séchées</td>
 <td></td>
 </tr>
 </tbody>
