--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -167,7 +167,7 @@
           <td style="text-align: left"></td>
       </tr>
       <tr>
-          <td style="text-align: left">Lil Cerise (8°)</td>
+          <td style="text-align: left">Choulette Cerise (5°)</td>
           <td style="text-align: left">4€</td>
           <td style="text-align: left">7,5€</td>
       </tr>
@@ -217,12 +217,12 @@
           <td style="text-align: left"></td>
       </tr>
       <tr>
-          <td style="text-align: left">Opéra (6°)</td>
-          <td style="text-align: left">4,5€</td>
-          <td style="text-align: left">8€</td>
+          <td style="text-align: left">Black Marble (5,1°)</td>
+          <td style="text-align: left">4€</td>
+          <td style="text-align: left">7,5€</td>
       </tr>
       <tr>
-          <td style="text-align: left">Stout - Brasserie Belleneart</td>
+          <td style="text-align: left">Stout - Brasserie Sullivan&rsquo;s</td>
           <td style="text-align: left"></td>
           <td style="text-align: left"></td>
       </tr>
@@ -508,7 +508,7 @@
   <tbody>
       <tr>
           <td style="text-align: left">Kombucha (Loven)</td>
-          <td style="text-align: left">5,5€</td>
+          <td style="text-align: left">5€</td>
       </tr>
       <tr>
           <td style="text-align: left">Gingembre, Jassberry, Hoppy</td>
@@ -539,7 +539,7 @@
           <td style="text-align: left"></td>
       </tr>
       <tr>
-          <td style="text-align: left">Lil Cola (avec ou sans sucre)</td>
+          <td style="text-align: left">Lil Cola</td>
           <td style="text-align: left">4,5€</td>
       </tr>
       <tr>
@@ -547,8 +547,8 @@
           <td style="text-align: left"></td>
       </tr>
       <tr>
-          <td style="text-align: left">Jus de pomme ou Pomme/poire</td>
-          <td style="text-align: left">4,5€</td>
+          <td style="text-align: left">Jus de pomme</td>
+          <td style="text-align: left">4€</td>
       </tr>
       <tr>
           <td style="text-align: left"></td>
