--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -117,12 +117,12 @@
           <td></td>
       </tr>
       <tr>
-          <td>Doom Muettal (6°)</td>
+          <td>Double Citra (8°)</td>
           <td>4,5€</td>
           <td>8€</td>
       </tr>
       <tr>
-          <td>Gose myrtille, cassis, mûre &amp; basilic- Brasserie La Muette</td>
+          <td>Double IPA - Brasserie Cambier</td>
           <td></td>
           <td></td>
       </tr>
@@ -157,12 +157,12 @@
           <td></td>
       </tr>
       <tr>
-          <td>Larsen (9°)</td>
+          <td>Horizon (8°)</td>
           <td>5€</td>
           <td>9€</td>
       </tr>
       <tr>
-          <td>Double IPA - Brasserie la Muette</td>
+          <td>Triple belge - Brasserie Chromatique</td>
           <td></td>
           <td></td>
       </tr>
@@ -187,12 +187,12 @@
           <td></td>
       </tr>
       <tr>
-          <td>Saison Vagabonda (5,5°)</td>
+          <td>Freestyle  (5°)</td>
           <td>4€</td>
           <td>7,5€</td>
       </tr>
       <tr>
-          <td>Saison - Brasserie Au Baron &amp; Cantina Errante</td>
+          <td>Bière de blé - Brasserie Pays Flamand</td>
           <td></td>
           <td></td>
       </tr>
@@ -267,7 +267,7 @@
           <td></td>
       </tr>
       <tr>
-          <td>Cidre Mauret (33cl)</td>
+          <td>Cidre brut bio (33cl)</td>
           <td>6€</td>
       </tr>
       <tr>
@@ -389,7 +389,7 @@
           <td>6€</td>
       </tr>
       <tr>
-          <td>Fuet catalan, Comté ou piment d&rsquo;Espelette</td>
+          <td>Fuet catalan, aux herbes ou piment d&rsquo;Espelette</td>
           <td></td>
       </tr>
       <tr>
