--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -187,9 +187,9 @@
           <td></td>
       </tr>
       <tr>
-          <td>Freestyle  (5°)</td>
-          <td>4€</td>
-          <td>7,5€</td>
+          <td>Freestyle (5°)</td>
+          <td>3,5€</td>
+          <td>7€</td>
       </tr>
       <tr>
           <td>Bière de blé - Brasserie Pays Flamand</td>
@@ -367,11 +367,11 @@
           <td></td>
       </tr>
       <tr>
-          <td>Loven Kombucha (33cl)</td>
-          <td>5€</td>
+          <td>Goodsy Kombucha (33cl)</td>
+          <td>5,5€</td>
       </tr>
       <tr>
-          <td>Gingembre, Flamingo, Jassberry, Hoppy</td>
+          <td>Framboise menthe &amp; astragale</td>
           <td></td>
       </tr>
   </tbody>
@@ -397,7 +397,7 @@
           <td>6€</td>
       </tr>
       <tr>
-          <td>Caviars d’aubergine, Terrine au piment d’espelette, Terrine à la bière jonquilles, Houmous citronné, Tomates séchées</td>
+          <td>Caviars d’aubergine, Terrine au piment d’espelette, Terrine à la bière jonquilles, Houmous citronné, Tomates séchées, thon à la bretone</td>
           <td></td>
       </tr>
       <tr>
@@ -405,7 +405,7 @@
           <td>16€</td>
       </tr>
       <tr>
-          <td>Saucisson au choix + Tartible au choix + 1 demi cheddar (100gr)</td>
+          <td>Saucisson au choix + Tartinable au choix + 1 demi cheddar (100gr)</td>
           <td></td>
       </tr>
   </tbody>
