--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -107,12 +107,12 @@
   </thead>
   <tbody>
       <tr>
-          <td>2 be fruit (5,5°)</td>
+          <td>Scarlet (8°)</td>
           <td>4,5€</td>
-          <td>8€</td>
+          <td>8,5€</td>
       </tr>
       <tr>
-          <td>Sour abricot &amp; rhubarbe - Brasserie La Muette</td>
+          <td>Sour fruits rouges - Brasserie La Débauche</td>
           <td></td>
           <td></td>
       </tr>
@@ -127,12 +127,12 @@
           <td></td>
       </tr>
       <tr>
-          <td>Sois muette et tais toi (6°)</td>
-          <td>4,5€</td>
-          <td>8€</td>
+          <td>Sunset (6,5°)</td>
+          <td>4€</td>
+          <td>7,5€</td>
       </tr>
       <tr>
-          <td>NEIPA - Brasserie La Muette</td>
+          <td>IPA - Brasserie Elemets Brewing</td>
           <td></td>
           <td></td>
       </tr>
@@ -177,12 +177,12 @@
           <td></td>
       </tr>
       <tr>
-          <td>Va te faire muette (6,8°)</td>
+          <td>Winter Pepper (7,5°)</td>
           <td>4,5€</td>
           <td>8€</td>
       </tr>
       <tr>
-          <td>IPA kveik - Brasserie La Muette</td>
+          <td>Winter Ale - Brasserie Thiriez</td>
           <td></td>
           <td></td>
       </tr>
