--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -118,8 +118,8 @@
       </tr>
       <tr>
           <td>Double Citra (8°)</td>
-          <td>4,5€</td>
-          <td>8€</td>
+          <td>5€</td>
+          <td>9€</td>
       </tr>
       <tr>
           <td>Double IPA - Brasserie Cambier</td>
@@ -129,7 +129,7 @@
       <tr>
           <td>Sunset (6,5°)</td>
           <td>4€</td>
-          <td>7,5€</td>
+          <td>8,5€</td>
       </tr>
       <tr>
           <td>IPA - Brasserie Elemets Brewing</td>
@@ -138,8 +138,8 @@
       </tr>
       <tr>
           <td>New French IPA (6,5°)</td>
-          <td>4€</td>
-          <td>7,5€</td>
+          <td>4,5€</td>
+          <td>8,5€</td>
       </tr>
       <tr>
           <td>NEIPA - Brasserie Cambier</td>
@@ -179,7 +179,7 @@
       <tr>
           <td>Winter Pepper (7,5°)</td>
           <td>4,5€</td>
-          <td>8€</td>
+          <td>8,5€</td>
       </tr>
       <tr>
           <td>Winter Ale - Brasserie Thiriez</td>
@@ -188,7 +188,7 @@
       </tr>
       <tr>
           <td>Freestyle (5°)</td>
-          <td>3,5€</td>
+          <td>4€</td>
           <td>7€</td>
       </tr>
       <tr>
@@ -371,7 +371,7 @@
           <td>5,5€</td>
       </tr>
       <tr>
-          <td>Framboise menthe &amp; astragale</td>
+          <td>Framboise menthe</td>
           <td></td>
       </tr>
   </tbody>
