--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -117,32 +117,12 @@
           <td></td>
       </tr>
       <tr>
-          <td>Double Citra (8°)</td>
-          <td>5€</td>
-          <td>9€</td>
-      </tr>
-      <tr>
-          <td>Double IPA - Brasserie Cambier</td>
-          <td></td>
-          <td></td>
-      </tr>
-      <tr>
-          <td>Sunset (6,5°)</td>
-          <td>4€</td>
-          <td>8,5€</td>
-      </tr>
-      <tr>
-          <td>IPA - Brasserie Elemets Brewing</td>
-          <td></td>
-          <td></td>
-      </tr>
-      <tr>
-          <td>New French IPA (6,5°)</td>
+          <td>Winter Pepper (7,5°)</td>
           <td>4,5€</td>
           <td>8,5€</td>
       </tr>
       <tr>
-          <td>NEIPA - Brasserie Cambier</td>
+          <td>Winter Ale - Brasserie Thiriez</td>
           <td></td>
           <td></td>
       </tr>
@@ -157,12 +137,32 @@
           <td></td>
       </tr>
       <tr>
-          <td>Horizon (8°)</td>
+          <td>West Coast Killer (6,8°)</td>
+          <td>4,5€</td>
+          <td>8,5€</td>
+      </tr>
+      <tr>
+          <td>IPA - Brasserie Cambier</td>
+          <td></td>
+          <td></td>
+      </tr>
+      <tr>
+          <td>New French IPA (6,5°)</td>
+          <td>4,5€</td>
+          <td>8,5€</td>
+      </tr>
+      <tr>
+          <td>NEIPA - Brasserie Cambier</td>
+          <td></td>
+          <td></td>
+      </tr>
+      <tr>
+          <td>Double Citra (8°)</td>
           <td>5€</td>
           <td>9€</td>
       </tr>
       <tr>
-          <td>Triple belge - Brasserie Chromatique</td>
+          <td>Double IPA - Brasserie Cambier</td>
           <td></td>
           <td></td>
       </tr>
@@ -177,42 +177,42 @@
           <td></td>
       </tr>
       <tr>
-          <td>Winter Pepper (7,5°)</td>
-          <td>4,5€</td>
-          <td>8,5€</td>
-      </tr>
-      <tr>
-          <td>Winter Ale - Brasserie Thiriez</td>
-          <td></td>
-          <td></td>
-      </tr>
-      <tr>
-          <td>Freestyle (5°)</td>
-          <td>4€</td>
-          <td>7€</td>
-      </tr>
-      <tr>
-          <td>Bière de blé - Brasserie Pays Flamand</td>
-          <td></td>
-          <td></td>
-      </tr>
-      <tr>
-          <td>Accalmie (4,5°)</td>
-          <td>4,5€</td>
-          <td>8€</td>
-      </tr>
-      <tr>
-          <td>Gose - Brasserie Sacrilège</td>
-          <td></td>
-          <td></td>
-      </tr>
-      <tr>
           <td>Locomotive (6,2°)</td>
           <td>4€</td>
           <td>7,5€</td>
       </tr>
       <tr>
           <td>Blonde - Brasserie Fives Cail</td>
+          <td></td>
+          <td></td>
+      </tr>
+      <tr>
+          <td>Horizon (8°)</td>
+          <td>4,5€</td>
+          <td>8,5€</td>
+      </tr>
+      <tr>
+          <td>Triple belge - Brasserie Chromatique</td>
+          <td></td>
+          <td></td>
+      </tr>
+      <tr>
+          <td>Blueberry Muffins (5,7°)</td>
+          <td>4€</td>
+          <td>7,5€</td>
+      </tr>
+      <tr>
+          <td>Pale Ale - Brasserie La débauche</td>
+          <td></td>
+          <td></td>
+      </tr>
+      <tr>
+          <td>Accalmie (4,5°)</td>
+          <td>4,5€</td>
+          <td>8,5€</td>
+      </tr>
+      <tr>
+          <td>Gose - Brasserie Sacrilège</td>
           <td></td>
           <td></td>
       </tr>
@@ -422,7 +422,7 @@
         <a href="https://instagram.com/raising.hops">Instagram</a>
         <a href="https://facebook.com/raisinghops">Facebook</a>
     </div>
-    <p class="copyright">© 2024 Raising Hops – Fall in love with beer again. - <a href="http://localhost:1313/mentions-legales/">Mentions légales</a></p>
+    <p class="copyright">© 2025 Raising Hops – Fall in love with beer again. - <a href="http://localhost:1313/mentions-legales/">Mentions légales</a></p>
 </footer>
 
 </body>
