--- a/public/carte/index.html
+++ b/public/carte/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html class="no-js" lang="fr">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=61892&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <title>Notre carte : Bières, cocktails, spiritueux, softs &amp;amp; en-cas</title>
     <meta charset="utf-8">
     <meta name="description" content="La carte du Raising Hops. Des bières pression ou canette, des cocktails, des softs et des encas.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="http://localhost:61892/carte/">
-    <link rel="icon" href="http://localhost:61892/favicon.svg" type="image/svg+xml"> 
+    <link rel="canonical" href="http://localhost:1313/carte/">
+    <link rel="icon" href="http://localhost:1313/favicon.svg" type="image/svg+xml"> 
 
-    <meta property="og:url" content="http://localhost:61892/carte/">
+    <meta property="og:url" content="http://localhost:1313/carte/">
   <meta property="og:site_name" content="Raising Hops">
   <meta property="og:title" content="Notre carte : Bières, cocktails, spiritueux, softs &amp; en-cas">
   <meta property="og:description" content="La carte du Raising Hops. Des bières pression ou canette, des cocktails, des softs et des encas.">
@@ -18,8 +18,8 @@
  
 
     
-    <link rel="stylesheet" href="http://localhost:61892/css/main.css">
-      <script src="http://localhost:61892/js/main.min.js"></script>
+    <link rel="stylesheet" href="http://localhost:1313/css/main.css">
+      <script src="http://localhost:1313/js/main.min.js"></script>
 
 <script type="application/ld+json">
   {
@@ -73,15 +73,15 @@
 
     <header class="main-header">
 	<div class="wrapper">
-		<a href="http://localhost:61892/" class="logo-link">
-			<img src="http://localhost:61892/favicon.svg" alt="Logo" class="logo-img" width="40px" height="40px" title="Logo">
+		<a href="http://localhost:1313/" class="logo-link">
+			<img src="http://localhost:1313/favicon.svg" alt="Logo" class="logo-img" width="40px" height="40px" title="Logo">
 		</a>
 		<nav class="navigation" hidden>
-			<div class="nav-item"><a href="http://localhost:61892/">Accueil</a></div>
-			<div class="nav-item"><a href="http://localhost:61892/carte/">La carte</a></div>
-			<div class="nav-item"><a href="http://localhost:61892/#horaires">Horaires</a></div>
-			<div class="nav-item"><a href="http://localhost:61892/blog/">Actualités</a></div>
-			<div class="nav-item"><a href="http://localhost:61892/#contact">Contact</a></div>
+			<div class="nav-item"><a href="http://localhost:1313/">Accueil</a></div>
+			<div class="nav-item"><a href="http://localhost:1313/carte/">La carte</a></div>
+			<div class="nav-item"><a href="http://localhost:1313/#horaires">Horaires</a></div>
+			<div class="nav-item"><a href="http://localhost:1313/blog/">Actualités</a></div>
+			<div class="nav-item"><a href="http://localhost:1313/#contact">Contact</a></div>
 		</nav>
 		<button aria-expanded="false" aria-controls="menu" class="menu">
 			<svg aria-label="Menu" viewBox="0 0 32 32" fill="currentcolor" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5px">
@@ -107,12 +107,12 @@
   </thead>
   <tbody>
       <tr>
-          <td>Scarlet (8°)</td>
+          <td>Ohana (6,1°)</td>
           <td>4,5€</td>
           <td>8,5€</td>
       </tr>
       <tr>
-          <td>Sour fruits rouges - Brasserie La Débauche</td>
+          <td>Pastry Sour Mangue Coco - Brasserie Chromatique</td>
           <td></td>
           <td></td>
       </tr>
@@ -123,16 +123,6 @@
       </tr>
       <tr>
           <td>Winter Ale - Brasserie Thiriez</td>
-          <td></td>
-          <td></td>
-      </tr>
-      <tr>
-          <td>Mongy de noël (8°)</td>
-          <td>4€</td>
-          <td>7,5€</td>
-      </tr>
-      <tr>
-          <td>Ambrée - Brasserie Cambier</td>
           <td></td>
           <td></td>
       </tr>
@@ -158,8 +148,8 @@
       </tr>
       <tr>
           <td>Cat Soup (8°)</td>
-          <td>4€</td>
-          <td>7,5€</td>
+          <td>4,5€</td>
+          <td>8,5€</td>
       </tr>
       <tr>
           <td>Double IPA - Brasserie la Débauche</td>
@@ -177,22 +167,22 @@
           <td></td>
       </tr>
       <tr>
-          <td>Locomotive (6,2°)</td>
+          <td>KM200 (5,2°)</td>
           <td>4€</td>
           <td>7,5€</td>
       </tr>
       <tr>
-          <td>Blonde - Brasserie Fives Cail</td>
+          <td>Pale Ale - Brasserie Tours du Malt</td>
           <td></td>
           <td></td>
       </tr>
       <tr>
-          <td>Horizon (8°)</td>
+          <td>L&rsquo;internationale (8°)</td>
           <td>4,5€</td>
           <td>8,5€</td>
       </tr>
       <tr>
-          <td>Triple belge - Brasserie Chromatique</td>
+          <td>Triple belge - Brasserie Fives Cail</td>
           <td></td>
           <td></td>
       </tr>
@@ -422,7 +412,7 @@
         <a href="https://instagram.com/raising.hops">Instagram</a>
         <a href="https://facebook.com/raisinghops">Facebook</a>
     </div>
-    <p class="copyright">© 2025 Raising Hops – Fall in love with beer again. - <a href="http://localhost:61892/mentions-legales/">Mentions légales</a></p>
+    <p class="copyright">© 2025 Raising Hops – Fall in love with beer again. - <a href="http://localhost:1313/mentions-legales/">Mentions légales</a></p>
 </footer>
 
 </body>
